syntax = "proto3";

package Authentication;

service AuthenticationService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc Authenticate(ClientRequest) returns (AuthResponse);
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    bool success = 1;
    string message = 2;
}

message ClientRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    bool success = 1;
    string message = 2;
    string enclaveName = 3;
    string accessPoint = 4;
    //string token = 3;
}
